// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createPreset options > add custom component raw override case 0 1`] = `
{
  "defaults": {
    "base": [
      "
        .my-xxx {
          @apply grid w-full grid-flow-row content-start items-center justify-items-center gap-4 text-center sm:grid-flow-col sm:grid-cols-[auto_minmax(auto,1fr)] sm:justify-items-start sm:text-left;
        }
      ",
    ],
    "styled": [
      "
        .my-xxx {
          @apply rounded-box border p-4 text-base-content border-base-200;

          
        }
      ",
    ],
    "utils": [
      {
        ".alert": {
          ".my-xxx": {
            "&:hover": {
              "css": {
                "color": "blue",
              },
            },
            "apply": [
              "bg-blue-500",
            ],
            "css": {
              "color": "red",
            },
          },
        },
      },
    ],
  },
  "selector": ".my-xxx",
}
`;

exports[`createPreset options > alert case 1 1`] = `
{
  "defaults": {
    "base": [
      "
        .alert {
          @apply grid w-full grid-flow-row content-start items-center justify-items-center gap-4 text-center sm:grid-flow-col sm:grid-cols-[auto_minmax(auto,1fr)] sm:justify-items-start sm:text-left;
        }
      ",
    ],
    "styled": [
      "
        .alert {
          @apply rounded-box border p-4 text-base-content border-base-200;

          
        }
      ",
    ],
    "utils": [],
  },
  "selector": ".alert",
}
`;

exports[`createPreset options > alert raw case 1 1`] = `
{
  "defaults": {
    "base": [
      "
        .alert {
          @apply grid w-full grid-flow-row content-start items-center justify-items-center gap-4 text-center sm:grid-flow-col sm:grid-cols-[auto_minmax(auto,1fr)] sm:justify-items-start sm:text-left;
        }
      ",
    ],
    "styled": [
      "
        .alert {
          @apply rounded-box border p-4 text-base-content border-base-200;

          
        }
      ",
    ],
    "utils": [],
  },
  "selector": ".alert",
}
`;

exports[`createPreset options > alert raw override case 0 1`] = `
{
  "defaults": {
    "base": [
      "
        .xxx {
          @apply grid w-full grid-flow-row content-start items-center justify-items-center gap-4 text-center sm:grid-flow-col sm:grid-cols-[auto_minmax(auto,1fr)] sm:justify-items-start sm:text-left;
        }
      ",
      {
        ".ccc": {
          "apply": [
            "bg-blue-500",
          ],
          "css": {
            "color": "red",
          },
        },
        ".xxx": {
          "apply": [
            "bg-red-800",
          ],
        },
      },
    ],
    "styled": [
      "
        .xxx {
          @apply rounded-box border p-4 text-base-content border-base-200;

          
        }
      ",
    ],
    "utils": [],
  },
  "selector": ".xxx",
}
`;
